# training_manager

./: LICENSE.md  README.md  pyproject.toml
trmn/: README  __init__.py  training_manager.py
