[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_trainer"       # パッケージ名
version = "0.1.0"             # バージョン
description = "My custom training manager for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [              # ★依存ライブラリをここに書く
    "torch",
    "tqdm",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]  # 直下のフォルダをパッケージとして探す設定