[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trmn"       # パッケージ名
version = "0.1.2"             # バージョン
description = "training manager for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [              # 依存ライブラリ
    "torch",
    "tqdm",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]  # 直下のフォルダをパッケージとして探す設定